# gransbot

./: .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml
bot/: __main__.py
