[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Anemoneya <42283663+hutchisr@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
revChatGPT = "^0.0.33.4"
websockets = "^10.4"
requests = "^2.28.1"
tomlkit = "^0.11.6"

[tool.poetry.scripts]
bot = "bot.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
# follow_imports = "silent"
install_types = true
non_interactive = true
# plugins = "marshmallow_dataclass.mypy"
