[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Anemoneya <42283663+hutchisr@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
revChatGPT = "^0.0.33.5"
websockets = "^10.4"
requests = "^2.28.1"
tomlkit = "^0.11.6"

[tool.poetry.scripts]
bot = "bot.__main__:main"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
# follow_imports = "silent"
install_types = true
non_interactive = true
# plugins = "marshmallow_dataclass.mypy"
